<resources>
    <string name="app_name">AndroKado</string>
    <string name="btn_a_acheter">A acheter</string>
    <string name="btn_achete">Acheté</string>
    <string name="txt_tri_par_prix">Tir par prix</string>
    <string name="txt_prix_par_defaut">Prix par défaut</string>
    <string name="txt_nom">Nom article</string>
    <string name="txt_description">Description</string>
    <string name="txt_url">URL</string>
    <string name="txt_prix">Prix</string>
    <string name="txt_note">Note</string>
    <string name="btn_sais_art_save">Enregistrer</string>
</resources>