<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.eni.courses.ConfigurationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_liste_articles"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_liste_articles"
        android:layout_marginTop="30dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/tv_tri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="200dp"
            android:text="@string/txt_tri_par_prix"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_tri_par_prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_prix_par_defaut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_prix_par_defaut"
            />

        <EditText
            android:id="@+id/et_prix_par_defaut"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:maxLength="5" />

    </GridLayout>

</RelativeLayout>