<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="fr.eni.courses.DetailArticleActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_det_art"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            >
            <TextView
                android:id="@+id/tv_det_art_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="empty"
                android:textAppearance="?android:textAppearanceLarge"
                />
            <TextView
                android:id="@+id/tv_det_art_prix"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:text="empty"
                android:textAppearance="?android:textAppearanceMedium"
                />
            <RatingBar
                android:id="@+id/rb_det_art_note"
                android:layout_height="wrap_content"
                android:rating="0"
                style="@style/Widget.AppCompat.RatingBar.Small"
                />
            <TextView
                android:id="@+id/tv_det_art_description"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnSpan="2"
                android:text="empty"
                android:textAppearance="?android:textAppearanceSmall"
                />
        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="fill"
            android:gravity="center"
            >
            <ProgressBar
                android:id="@+id/pb_det_art_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:id="@+id/iv_det_art_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:src="@drawable/im_noimageavailable"
                />
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:rowCount="1"
            android:columnCount="2"
            >
            <ImageButton
                android:id="@+id/btn_det_art_planete"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:src="@mipmap/im_planete"
                android:onClick="onClickPlanete"
                />
            <ToggleButton
                android:id="@+id/btn_det_art_acheter"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:textOn="@string/btn_a_acheter"
                android:textOff="@string/btn_achete"
                android:onClick="onClickAcheter"
                />
        </GridLayout>

    </GridLayout>

</LinearLayout>